# FireWireAudio

./: CMakeLists.txt
include/FWA/: AudioDevice.h  CommandInterface.h  DeviceDiscoverySolution.h  DiceAbsoluteAddresses.hpp  DiceAudioDevice.h  DiceDefines.hpp  DiceEAP.hpp  IOKitFireWireDeviceDiscovery.h
include/FWA/dice/: DiceAbsoluteAddresses.hpp  DiceAudioDevice.h  DiceDefines.hpp  DiceEAP.hpp  DiceRouter.hpp
memory-bank/: activeContext.md  channel-count-validation-plan.md  channel-name-deduplication-plan.md  decisionLog.md  dice-channel-integration-plan.md  dice-detection-plan.md  dice-register-plan.md  ffado-research-summary.md  productContext.md  progress.md  projectbrief.md  scanner-improvement-plan.md  scanner-refactor-plan.md  systemPatterns.md
memory-bank/plans/: dynamic-discovery-plan.md  scanner-improvement-plan.md  scanner-refactor-plan.md
memory-bank/project-summaries/include/: Error.h.md  fwa_capi.h.md
memory-bank/project-summaries/include/FWA/: AVCInfoBlock.hpp.md  AudioDevice.h.md  AudioDeviceStream.hpp.md  AudioPlug.hpp.md  AudioStreamFormat.hpp.md  AudioSubunit.hpp.md  CommandInterface.h.md  DescriptorAccessor.hpp.md  DescriptorReader.hpp.md  DescriptorSpecifier.hpp.md  DescriptorUtils.hpp.md  DeviceController.h.md  DeviceDiscoverySolution.h.md  DeviceInfo.hpp.md  DeviceParser.hpp.md  Enums.hpp.md  Error.h.md  Helpers.h.md  IFireWireDeviceDiscovery.h.md  IOKitFireWireDeviceDiscovery.h.md  JsonHelpers.hpp.md  MusicSubunitCapabilities.hpp.md  MusicSubunitDescriptorParser.hpp.md  PlugDetailParser.hpp.md  Subunit.hpp.md  SubunitDiscoverer.hpp.md  UnitPlugDiscoverer.hpp.md
memory-bank/project-summaries/include/FWA_CAPI/: module.modulemap.md
memory-bank/project-summaries/include/shared/: SharedMemoryStructures.hpp.md
memory-bank/project-summaries/src/FWA/: AVCInfoBlock.cpp.md  AudioDevice.cpp.md  AudioPlug.cpp.md  AudioStreamFormat.cpp.md  AudioSubunit.cpp.md  Helpers.cpp.md  (+17 more)
src/FWA/: AudioDevice.cpp  CMakeLists.txt  CommandInterface.cpp  DeviceParser.cpp  DiceAudioDevice.cpp  IOKitFireWireDeviceDiscovery.cpp
src/FWA/dice/: DiceAudioDevice.cpp  DiceEAP.cpp  DiceRouter.cpp
src/tools/: CMakeLists.txt  Makefile  cmake_install.cmake  test_eap.cpp
src/tools/scanner/: channel_count_validator.cpp  channel_count_validator.hpp  channel_discovery.cpp  channel_discovery.hpp  channel_name_extractor.cpp  channel_name_extractor.hpp  channel_pattern_matcher.cpp  channel_pattern_matcher.hpp  channel_summary_reporter.cpp  channel_summary_reporter.hpp  config_rom.cpp  config_rom.hpp  dice_aes_registers.cpp  dice_aes_registers.hpp  dice_avs_registers.cpp  dice_avs_registers.hpp  dice_base_discovery.cpp  dice_base_discovery.hpp  dice_clock_registers.cpp  dice_clock_registers.hpp  dice_config.cpp  dice_config.hpp  dice_global_registers.cpp  dice_global_registers.hpp  dice_gpcsr_registers.cpp  dice_gpcsr_registers.hpp  dice_helpers.cpp  dice_helpers.hpp  dice_mixer_registers.cpp  dice_mixer_registers.hpp  dice_register_readers.cpp  dice_register_readers.hpp  dice_stream_helpers.cpp  dice_stream_helpers.hpp  dice_stream_registers.cpp  dice_stream_registers.hpp  eap_helpers.cpp  eap_helpers.hpp  endianness_helpers.cpp  endianness_helpers.hpp  (+35 more)
test/: Makefile
(+63 files in other folders)
